--- a/_sass/razza/_biglist.scss
+++ b/_sass/razza/_biglist.scss
@@ -61,7 +61,8 @@
           font-family: $head-font-family;
           font-size: larger;
           font-stretch: 80%;
-          font-weight: 600;
+
+          font-variation-settings: "wght" 600;
         }
       }
     }
